Image compression, fixed services page layout on mobile

--- a/src/app/services/ServicesPage.scss
+++ b/src/app/services/ServicesPage.scss
@@ -1,24 +1,29 @@
-@use "../_utils/styles/utils.scss" as *;
-@use "../_utils/styles/colors.scss" as *;
+@use '../_utils/styles/utils.scss' as *;
+@use '../_utils/styles/colors.scss' as *;
 
 .ServicesPage {
-  display: flex;
-  justify-content: center;
-  padding: defaultUnit(100) defaultUnit(0);
-  position: relative;
+	display: flex;
+	justify-content: center;
+	padding: defaultUnit(100) defaultUnit(0);
+	position: relative;
 
-  &__content {
-    display: flex;
-    gap: defaultUnit(30);
-  }
+	&__content {
+		display: flex;
+		gap: defaultUnit(30);
 
-  &__section {
-    display: flex;
-    flex-direction: column;
-    gap: defaultUnit(30);
-  }
+		@include mobile {
+			flex-direction: column;
+			align-items: center;
+		}
+	}
 
-  @include mobile {
-    flex-direction: column;
-  }
+	&__section {
+		display: flex;
+		flex-direction: column;
+		gap: defaultUnit(30);
+	}
+
+	@include mobile {
+		flex-direction: column;
+	}
 }
